tests/paczka1/small_fuzzy/19296020.err
Error in line 1: 3tVrPf2 A506 41,6
Error in line 3: 3tVrPf2 S779 35,1
